# getfiles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.example.txt  src.c  src2.c  unset-proxy.cmd
config/: config.example.txt
scripts/: unset-proxy.ps1
src/: CMakeLists.txt  main.cpp  server.cpp
test/: CMakeLists.txt  location.cpp  server.py  test.c  test.cc  test3.c
